[build-system]
requires = [
    "setuptools>=64.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "rssbot"
description = "24/7 Feed Fetcher"
version = "620"
authors = [
    {name = "Bart Thate",email = "rssbotd@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]

[project.urls]
"home" = "https://pypi.org/project/rssbot"
"bugs" = "https://github.com/otpcr/rssbot/issues"
"source" = "https://github.com/otpcr/rssbot"


[tool.seuptools]
script-files = [
    "bin/rssbot",
]
packages=[
    "rssbot",
    "rssbot.modules",
]


[tool.setuptools.data-files]
"share/doc/rssbot" = [
    "README.rst"
]
