[build-system]
requires = [
    "setuptools>=64.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "rssbot"
description = "24/7 Feed Fetcher."
version = "642"
authors = [
    {name = "Bart Thate",email = "rssbotd@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
"rssbot" = "rssbot.__main__:main"


[project.urls]
"home"   = "https://pypi.org/project/rssbot"
"bugs"   = "https://github.com/rssbotd/rssbot/issues"
"source" = "https://github.com/rssbotd/rssbot"


[tool.seuptools]
packages=[
    "rssbot",
    "rssbot.modules"
]
